new projects updated

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header>
       <div class="header-wrapper">
         <div class="col-left">
-          <p class="bold">Kayden James Mimmack</p>
-          <p><a href="mailto:kjmimmack@ucdavis.edu">kjmimmack@ucdavis.edu</a></p>
+          <p class="bold">Kayden Mimmack</p>
+          <p><a href="mailto:kjmimmack@ucdavis.edu">kjmimmack@gmail.com</a></p>
           <p><a href="https://github.com/mimmackk/">Github</a></p>
           <p><a href="https://linkedin.com/in/kayden-mimmack-797187142">LinkedIn</a></p>
         </div>
         <div class="col-right">
           <p>
-          I graduated with a Bachelor's from Tufts University in 2018 and am currently finishing my Master's degree at UC Davis. Both of my degrees are in applied math (a field so nice, I studied it twice!) but I also have a background in both computer science and design. I enjoy easy hikes, feel-good sci-fi, and delightful oddities. Scroll down for a portfolio of my web development and graphic design work.
+          I graduated with a Bachelor's degree from Tufts University in 2018 and am currently finishing my Master's at UC Davis. Both of my degrees are in applied mathematics, but I also have a background in both computer science and design. Scroll down for a portfolio of my web development and graphic design work.
           </p>
         </div>
         <div class="end-cols"></div>
@@ -35,11 +35,15 @@
     <h1 id="featured-projects">Highlighted Web Projects</h1>
     <!-- ............................................................... -->
 
-    <h2>Graphing the 3D p-Norm Unit Ball</h2>
+    <h2>Graphing the p-Norm Unit Ball in 3 Dimensions</h2>
     <p><a href="http://mimmackk.github.io/unitball">Link</a> · Mathematical exploration of the problem of graphing the p-norm unit ball in 3 dimensions.</p>
-    <img class="web-img-special" src="img/gridtosurface.png" alt="Screenshot of project"/>
-    <img class="web-img-special2" src="img/animation3d.gif" alt="Screenshot of project"/>
+    <img class="web-img-special" src="https://raw.githubusercontent.com/mimmackk/unitball/master/head.jpg" alt="Screenshot of project"/>
+    <!-- <img class="web-img-special2" src="img/animation3d.gif" alt="Screenshot of project"/> -->
 
+    <h2>Hopfield Network Simulation</h2>
+    <p><a href="https://mimmackk.github.io/hopfield/simulation/index.html">Link</a> · Interact with a Hopfield network, a type of neural network that models associative memory.</p>
+    <img class="web-img-special" src="https://raw.githubusercontent.com/mimmackk/hopfield/master/simulation/head.jpg" alt="Screenshot of project"/>
+<!--  -->
     <h2>Facebook Quiz</h2>
     <p><a href="http://tuftsobserver.org/multimedia/online-comments">Live</a> · <a href="https://github.com/tuftsobserver/online-comments">Github</a> · Designed from scratch to imitate Facebook - user follows a choose-your-own-adventure quiz in the comments section of a controversial post.</p>
     <img class="web-img" src="img/online-comments.png" alt="Screenshot of project"/>
