fixed resume link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p><a href="mailto:kjmimmack@ucdavis.edu">kjmimmack@gmail.com</a></p>
           <p><a href="https://github.com/mimmackk/">Github</a></p>
           <p><a href="https://linkedin.com/in/kayden-mimmack-797187142">LinkedIn</a></p>
-          <p><a href="https://github.com/mimmackk/mimmackk.github.io/blob/master/resume.pdf">Resume</a></p>
+          <p><a href="https://mimmackk.github.io/resume.pdf">Resume</a></p>
         </div>
         <div class="col-right">
           <p>
