postgrad updates & typo fixes

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div class="col-left">
           <p class="bold">Kayden Mimmack</p>
           <p><a href="mailto:kjmimmack@ucdavis.edu">kjmimmack@gmail.com</a></p>
-          <p><a href="https://github.com/mimmackk/">Github</a></p>
+          <p><a href="https://github.com/mimmackk/">GitHub</a></p>
           <p><a href="https://linkedin.com/in/kayden-mimmack-797187142">LinkedIn</a></p>
           <p><a href="https://mimmackk.github.io/resume.pdf">Resume</a></p>
         </div>
         <div class="col-right">
           <p>
-          I graduated with a Bachelor's degree from Tufts University in 2018 and am currently finishing my Master's at UC Davis. Both of my degrees are in applied mathematics, but I also have a background in both computer science and design. Scroll down for a portfolio of my web development and graphic design work.
+          I graduated with a bachelor's degree from Tufts University in 2018 and recently finished my master's at UC Davis. Both of my degrees are in applied mathematics, but I also have a background in both computer science and design. Scroll down for a portfolio of my web development and graphic design work.
           </p>
         </div>
         <div class="end-cols"></div>
