--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
   </main>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     // If an internal link is clicked, smooth scroll to that location
     $('a[href*="#"]').on('click', function(e) {
