added detailed descriptions of group projects

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h3>Hopfield Network Simulation</h3>
           <p>
             <a href="https://mimmackk.github.io/hopfield/simulation/index.html">Live</a>
-            <a href="https://github.com/mimmackk/hopfield/">Github</a>
+            <a href="https://github.com/mimmackk/hopfield/">GitHub</a>
             Interactive simulation of a Hopfield network, a type of neural network that models associative memory. Created with JavaScript.
           </p>
           <img src="https://raw.githubusercontent.com/mimmackk/hopfield/master/simulation/head.jpg" alt="Screenshot of project">
@@ -81,6 +81,9 @@
               <a href="https://github.com/tuftsobserver/online-comments">GitHub</a>
               Choose-your-own-adventure quiz in the comments of an imitation Facebook post. Built to accompany article about online debate.
             </p>
+            <p>
+                Group effort. Co-designed, coded quiz in JavaScript, and made design mobile responsive.
+            </p>
             <img src="img/online-comments.png" alt="Screenshot of project">
           </li>
           <li>
@@ -88,7 +91,10 @@
             <p>
               <a href="http://tuftsobserver.org/multimedia/major-sprawl">Live</a>
               <a href="https://github.com/tuftsobserver/major-sprawl">GitHub</a>
-              Map of the spread of Tufts courses by department across campus, built using Google Maps JavaScript API. Built to accompany article on department centralization.
+              Map of the spread of Tufts courses by department across campus. Built to accompany article on department centralization.
+            </p>
+            <p>
+              Group effort. Co-designed, performed data collection, integrated data with Google Maps API, and made design mobile responsive.
             </p>
             <img src="img/major-sprawl.png" alt="Screenshot of project">
           </li>
@@ -108,6 +114,9 @@
               <a href="https://github.com/tuftsobserver/lit2018">GitHub</a>
               Artistic digitization of the Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, and art.
             </p>
+            <p>
+              Group effort. Converted art to animated GIFs, designed pieces "A Tendency to Ask" through ending credits, and cohered all final designs.
+            </p>
             <img src="img/lit2018.png" alt="Screenshot of project">
           </li>
       </ul>
@@ -121,6 +130,9 @@
             <a href="http://tuftsobserver.org/photo-inset/resistance2017/">Live</a>
             <a href="https://github.com/tuftsobserver/photo-inset/tree/master/resistance2017">GitHub</a>
             Digital gallery of artistic photoset with snap scrolling.
+          </p>
+          <p>
+            Group effort. Coded lightbox gallery and made design mobile-responsive.
           </p>
           <img src="img/transparency.png" alt="Screenshot of project">
         </li>
@@ -139,6 +151,9 @@
             <a href="http://tuftsobserver.org/multimedia/queerness2017/">Live</a>
             <a href="https://github.com/tuftsobserver/queerness2017">GitHub</a>
             Artistic digitization of the Queerness Issue of the Tufts Observer, containing a compilation of poetry, prose, photography, and art.
+          </p>
+          <p>
+            Group effort. Designed pieces "I Identify as a Heterosexual" through "Addendum," title page, table of contents, and credits; cohered all final designs.
           </p>
           <img src="img/queerness.png" alt="Screenshot of project">
         </li>
@@ -167,6 +182,9 @@
             <a href="https://github.com/tuftsobserver/missed-connections">GitHub</a>
             Displays live responses from Google Forms using Google Sheets JavaScript API.
           </p>
+          <p>
+            Group effort. Coded integration with Google Sheets API.
+          </p>
           <img src="img/missed.png" alt="Screenshot of project">
         </li>
         <li>
@@ -175,6 +193,9 @@
             <a href="http://tuftsobserver.org/multimedia/lit2017/">Live</a>
             <a href="https://github.com/tuftsobserver/lit2017">GitHub</a>
             Artistic digitization of the Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, photography, and art.
+          </p>
+          <p>
+            Group effort. Designed pieces "A Slow Brunch" through "A Guide to Helping Depressed Parents" and made design mobile responsive.
           </p>
           <img src="img/lit2017.png" alt="Screenshot of project">
         </li>
@@ -210,7 +231,7 @@
           <p>
             <a href="http://tuftsobserver.org/photo-inset/patterns2017/">Live</a>
             <a href="https://github.com/tuftsobserver/photo-inset/tree/master/patterns2017">GitHub</a>
-            Digital gallery of artistic photoset designed to resemble a handwritten scrapbook.
+            Digital gallery of artistic photoset designed to resemble a handwritten scrapbook. Group effort: co-designed.
           </p>
           <img src="img/tehran.png" alt="Screenshot of project">
         </li>
