comment out section

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
   <nav>
     <ul>
       <!-- Keep this all one line so that newlines don't mess up inline spacing -->
-      <li><a href="#about">About</a></li><li><a href="#math">Math Viz</a></li><li><a href="#web-design">Web Design</a></li><li><a href="#graphic-design">Graphic Design</a></li>
+      <li><a href="#math">Math Viz</a></li><li><a href="#web-design">Web Design</a></li><li><a href="#graphic-design">Graphic Design</a></li>
+      <!-- <li><a href="#about">About</a></li><li><a href="#math">Math Viz</a></li><li><a href="#web-design">Web Design</a></li><li><a href="#graphic-design">Graphic Design</a></li> -->
     </ul>
   </nav>
 
   <main>
-    <section id="about">
+    <!-- <section id="about">
       <div class="vert-center">
         <h2>About</h2>
         <div id="headshot"><img src="img/0.jpg"></div>
@@ -45,7 +46,7 @@
           <i class="fa fa-angle-double-down" aria-hidden="true"></i>
         </p>
       </div>
-    </section>
+    </section> -->
 
     <section id="math">
       <h2>Math Visualizations</h2>
