updated bio and converted project titles and photos to clickable links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Kayden Mimmack</h1>
 
       <ul>
-        <li><a href="https://linkedin.com/in/kayden-mimmack-797187142">LinkedIn <i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+        <li><a href="https://linkedin.com/in/kjmimmack">LinkedIn <i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
         <li><a href="https://github.com/mimmackk/">GitHub <i class="fa fa-github" aria-hidden="true"></i></a></li>
         <br>
         <li>Contact:<br><a href="mailto:kjmimmack@gmail.com">kjmimmack@gmail.com</a></li>
@@ -29,44 +29,45 @@
   <nav>
     <ul>
       <!-- Keep this all one line so that newlines don't mess up inline spacing -->
-      <li><a href="#math">Math Viz</a></li><li><a href="#web-design">Web Design</a></li><li><a href="#graphic-design">Graphic Design</a></li>
-      <!-- <li><a href="#about">About</a></li><li><a href="#math">Math Viz</a></li><li><a href="#web-design">Web Design</a></li><li><a href="#graphic-design">Graphic Design</a></li> -->
+      <li><a href="#about">About</a></li><li><a href="#math">Math Viz</a></li><li><a href="#web-design">Web Design</a></li><li><a href="#graphic-design">Graphic Design</a></li>
     </ul>
   </nav>
 
   <main>
-    <!-- <section id="about">
+    <section id="about">
       <div class="vert-center">
         <h2>About</h2>
         <div id="headshot"><img src="img/0.jpg"></div>
         <p>
-          I'm a programmer, teacher, and designer who enjoys building mathematical vizualizations and designing delightful webpages. I currently live in northern California, where I recently graduated from UC Davis with a Master's in Applied Math, but I grew up in the heart & heat of North Carolina.
+          I enjoy building mathematical vizualizations and am a hobbiest web app designer. I've lived all across the United States — I grew up in North Carolina, went to school in Massachussetts and California, and am currently bunkered down in Omaha — and I'm always excited to explore new places and experiences.
+        </p>
+        <p>
+          In my free time, I love cooking with friends, tutoring math, and writing speculative romance stories, and when I lived in California, I enjoyed helping my parents build their own house in the Santa Cruz mountains.
         </p>
         <p style="text-align: center">
           <i class="fa fa-angle-double-down" aria-hidden="true"></i>
         </p>
       </div>
-    </section> -->
+    </section>
 
     <section id="math">
       <h2>Math Visualizations</h2>
       <ul>
         <li>
-          <h3>Graphing the p-Norm Unit Ball in 3 Dimensions</h3>
+          <h3><a href="http://mimmackk.github.io/unitball">Graphing the p-Norm Unit Ball in 3 Dimensions</a></h3>
           <p>
-            <a href="http://mimmackk.github.io/unitball">Link</a>
-            Graphing the p-norm unit ball in 2 dimensions is a common exercise introductory analysis. Explore the problem-solving process of modeling the 3-dimensional version, a much more difficult problem, using Python.
+            <a href="http://github.com/mimmackk/unitball">GitHub</a>
+            A walk through the problem-solving process of graphing the p-norm unit ball in 3D with the Plotly graphing library in Python.
           </p>
-          <img src="https://raw.githubusercontent.com/mimmackk/unitball/master/head.jpg" alt="Screenshot of project">
+          <a href="http://mimmackk.github.io/unitball"><img src="https://raw.githubusercontent.com/mimmackk/unitball/master/head.jpg" alt="Screenshot of project"></a>
         </li>
         <li>
-          <h3>Hopfield Network Simulation</h3>
+          <h3><a href="https://mimmackk.github.io/hopfield/simulation/index.html">Hopfield Network Simulation</a></h3>
           <p>
-            <a href="https://mimmackk.github.io/hopfield/simulation/index.html">Live</a>
             <a href="https://github.com/mimmackk/hopfield/">GitHub</a>
-            Interactive simulation of a Hopfield network, a type of neural network that models associative memory. Created with JavaScript.
+            JavaScript simulation of a Hopfield network, a type of neural network that models associative memory. 
           </p>
-          <img src="https://raw.githubusercontent.com/mimmackk/hopfield/master/simulation/head.jpg" alt="Screenshot of project">
+          <a href="https://mimmackk.github.io/hopfield/simulation/index.html"><img src="https://raw.githubusercontent.com/mimmackk/hopfield/master/simulation/head.jpg" alt="Screenshot of project"></a>
         </li>
       </ul>
 
@@ -76,49 +77,39 @@
       <h2>Web Design & Development</h2>
       <ul>
           <li>
-            <h3>Your Opinion Is Now Live</h3>
+            <h3><a href="http://tuftsobserver.org/multimedia/major-sprawl">Major Sprawl</a></h3>
             <p>
-              <a href="http://tuftsobserver.org/multimedia/online-comments">Live</a>
-              <a href="https://github.com/tuftsobserver/online-comments">GitHub</a>
-              Choose-your-own-adventure quiz in the comments of an imitation Facebook post. Built to accompany article about online debate.
-            </p>
-            <p>
-                Group effort. Co-designed, coded quiz in JavaScript, and made design mobile responsive.
-            </p>
-            <img src="img/online-comments.png" alt="Screenshot of project">
-          </li>
-          <li>
-            <h3>Major Sprawl</h3>
-            <p>
-              <a href="http://tuftsobserver.org/multimedia/major-sprawl">Live</a>
               <a href="https://github.com/tuftsobserver/major-sprawl">GitHub</a>
-              Map of the spread of Tufts courses by department across campus. Built to accompany article on department centralization.
+              Map of the spread of Tufts courses by department across campus. Built to accompany article on departments' geographic centralization.
             </p>
             <p>
-              Group effort. Co-designed, performed data collection, integrated data with Google Maps API, and made design mobile responsive.
+              Group effort. Co-designed, performed data collection, integrated data with Google Maps API, and edited responsive mobile design.
             </p>
-            <img src="img/major-sprawl.png" alt="Screenshot of project">
+            <a href="http://tuftsobserver.org/multimedia/major-sprawl"><img src="img/major-sprawl.png" alt="Screenshot of project"></a>
           </li>
           <li>
-            <h3>Book Recommendations</h3>
+            <h3><a href="http://tuftsobserver.org/multimedia/bookshelf">Book Recommendations</a></h3>
             <p>
-              <a href="http://tuftsobserver.org/multimedia/bookshelf">Live</a>
               <a href="https://github.com/tuftsobserver/bookshelf">GitHub</a>
               Displays live responses from Google Forms using Google Sheets JavaScript API. Automatically links new book recommendations to Goodreads.
             </p>
-            <img src="img/bookshelf.png" alt="Screenshot of project">
+            <a href="http://tuftsobserver.org/multimedia/bookshelf"><img src="img/bookshelf.png" alt="Screenshot of project"></a>
           </li>
           <li>
-            <h3>The Literary Issue 2018</h3>
+            <h3><a href="http://tuftsobserver.org/multimedia/tattoos/">"What does your tattoo mean to you?"</a></h3>
             <p>
-              <a href="http://tuftsobserver.org/multimedia/lit2018">Live</a>
-              <a href="https://github.com/tuftsobserver/lit2018">GitHub</a>
-              Artistic digitization of the Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, and art.
+              <a href="https://github.com/tuftsobserver/tattoos">GitHub</a>
+              Special project built for the Tufts Observer's podcast team. Dynamic photo grid with integrated audio.
             </p>
+            <a href="http://tuftsobserver.org/multimedia/tattoos/"><img src="img/tattoo.png" alt="Screenshot of project"></a>
+          </li>
+          <li>
+            <h3><a href="http://tuftsobserver.org/multimedia/longdistance/">Long Distance</a></h3>
             <p>
-              Group effort. Converted art to animated GIFs, designed pieces "A Tendency to Ask" through ending credits, and cohered all final designs.
+              <a href="https://github.com/tuftsobserver/longdistance">GitHub</a>
+              Analysis of survey on long-distance relationships, featuring scrolling animations.
             </p>
-            <img src="img/lit2018.png" alt="Screenshot of project">
+            <a href="http://tuftsobserver.org/multimedia/longdistance/"><img src="img/longdistance.png" alt="Screenshot of project"></a>
           </li>
       </ul>
 
@@ -126,115 +117,110 @@
 
       <ul id="collapsable">
         <li>
-          <h3>Photo Inset: transparency.</h3>
+          <h3><a href="http://tuftsobserver.org/multimedia/online-comments">Your Opinion Is Now Live</a></h3>
           <p>
-            <a href="http://tuftsobserver.org/photo-inset/resistance2017/">Live</a>
+            <a href="https://github.com/tuftsobserver/online-comments">GitHub</a>
+            Choose-your-own-adventure quiz in the comments of an imitation Facebook post. Built to accompany article about online debate.
+          </p>
+          <p>
+              Group effort. Co-designed, coded quiz in JavaScript, and edited responsive mobile design.
+          </p>
+          <a href="http://tuftsobserver.org/multimedia/online-comments"><img src="img/online-comments.png" alt="Screenshot of project"></a>
+        </li>
+        <li>
+          <h3><a href="http://tuftsobserver.org/multimedia/transhealth/">The Reality of Transitioning at Tufts</a></h3>
+          <p>
+            <a href="https://github.com/tuftsobserver/transhealth">GitHub</a>
+            Article with scrolling animations and hover definitions of unfamiliar terms, built using Balloon.css.
+          </p>
+          <a href="http://tuftsobserver.org/multimedia/transhealth/"><img src="img/transhealth.png" alt="Screenshot of project"></a>
+        </li>
+        <li>
+          <h3><a href="http://tuftsobserver.org/multimedia/south-asia-speaks/">South Asia Speaks</a></h3>
+          <p>
+            <a href="https://github.com/tuftsobserver/south-asia-speaks">GitHub</a>
+            Interactive artwork integrated with SoundCloud interviews, built using EaselJS.
+          </p>
+          <a href="http://tuftsobserver.org/multimedia/south-asia-speaks/"><img src="img/speaks.png" alt="Screenshot of project"></a>
+        </li>
+        <li>
+          <h3><a href="http://tuftsobserver.org/multimedia/lit2018">The Literary Issue 2018</a></h3>
+          <p>
+            <a href="https://github.com/tuftsobserver/lit2018">GitHub</a>
+            Artistic digitization of the Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, and art.
+          </p>
+          <p>
+            Group effort. Converted art to animated GIFs, designed pieces "A Tendency to Ask" through ending credits, and cohered all final designs.
+          </p>
+          <a href="http://tuftsobserver.org/multimedia/lit2018"><img src="img/lit2018.png" alt="Screenshot of project"></a>
+        </li>
+        <li>
+          <h3><a href="http://tuftsobserver.org/photo-inset/resistance2017/">Photo Inset: transparency.</a></h3>
+          <p>
             <a href="https://github.com/tuftsobserver/photo-inset/tree/master/resistance2017">GitHub</a>
             Digital gallery of artistic photoset with snap scrolling.
           </p>
           <p>
-            Group effort. Coded lightbox gallery and made design mobile-responsive.
+            Group effort. Coded lightbox gallery and edited responsive mobile design.
           </p>
-          <img src="img/transparency.png" alt="Screenshot of project">
+          <a href="http://tuftsobserver.org/photo-inset/resistance2017/"><img src="img/transparency.png" alt="Screenshot of project"></a>
         </li>
         <li>
-          <h3>Long Distance</h3>
+          <h3><a href="http://tuftsobserver.org/multimedia/queerness2017/">The Queerness Issue 2017</a></h3>
           <p>
-            <a href="http://tuftsobserver.org/multimedia/longdistance/">Live</a>
-            <a href="https://github.com/tuftsobserver/longdistance">GitHub</a>
-            Analysis of survey on long-distance relationships, featuring scrolling animations.
-          </p>
-          <img src="img/longdistance.png" alt="Screenshot of project">
-        </li>
-        <li>
-          <h3>The Queerness Issue 2017</h3>
-          <p>
-            <a href="http://tuftsobserver.org/multimedia/queerness2017/">Live</a>
             <a href="https://github.com/tuftsobserver/queerness2017">GitHub</a>
             Artistic digitization of the Queerness Issue of the Tufts Observer, containing a compilation of poetry, prose, photography, and art.
           </p>
           <p>
             Group effort. Designed pieces "I Identify as a Heterosexual" through "Addendum," title page, table of contents, and credits; cohered all final designs.
           </p>
-          <img src="img/queerness.png" alt="Screenshot of project">
+          <a href="http://tuftsobserver.org/multimedia/queerness2017/"><img src="img/queerness.png" alt="Screenshot of project"></a>
         </li>
         <li>
-          <h3>Podcast: Chartered Exploitation</h3>
+          <h3><a href="http://tuftsobserver.org/multimedia/chartered-exploitation/">Podcast: Chartered Exploitation</a></h3>
           <p>
-            <a href="http://tuftsobserver.org/multimedia/chartered-exploitation/">Live</a>
             <a href="https://github.com/tuftsobserver/chartered-exploitation">GitHub</a>
             Integrates interview sound bites hosted on SoundCloud with article on charter schools.
           </p>
-          <img src="img/chex.png" alt="Screenshot of project">
+          <a href="http://tuftsobserver.org/multimedia/chartered-exploitation/"><img src="img/chex.png" alt="Screenshot of project"></a>
         </li>
         <li>
-          <h3>Comedy News</h3>
+          <h3><a href="http://tuftsobserver.org/multimedia/comedy-news/">Comedy News</a></h3>
           <p>
-            <a href="http://tuftsobserver.org/multimedia/comedy-news/">Live</a>
             <a href="https://github.com/tuftsobserver/comedy-news">GitHub</a>
             Plays comedy news video clips in the background which change as the reader scrolls through the article.
           </p>
-          <img src="img/comedy.png" alt="Screenshot of project">
+          <a href="http://tuftsobserver.org/multimedia/comedy-news/"><img src="img/comedy.png" alt="Screenshot of project"></a>
         </li>
         <li>
-          <h3>Missed Connections</h3>
+          <h3><a href="http://tuftsobserver.org/multimedia/missed-connections/">Missed Connections</a></h3>
           <p>
-            <a href="http://tuftsobserver.org/multimedia/missed-connections/">Live</a>
             <a href="https://github.com/tuftsobserver/missed-connections">GitHub</a>
             Displays live responses from Google Forms using Google Sheets JavaScript API.
           </p>
           <p>
             Group effort. Coded integration with Google Sheets API.
           </p>
-          <img src="img/missed.png" alt="Screenshot of project">
+          <a href="http://tuftsobserver.org/multimedia/missed-connections/"><img src="img/missed.png" alt="Screenshot of project"></a>
         </li>
         <li>
-          <h3>The Literary Issue 2017</h3>
+          <h3><a href="http://tuftsobserver.org/multimedia/lit2017/">The Literary Issue 2017</a></h3>
           <p>
-            <a href="http://tuftsobserver.org/multimedia/lit2017/">Live</a>
             <a href="https://github.com/tuftsobserver/lit2017">GitHub</a>
             Artistic digitization of the Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, photography, and art.
           </p>
           <p>
-            Group effort. Designed pieces "A Slow Brunch" through "A Guide to Helping Depressed Parents" and made design mobile responsive.
+            Group effort. Designed pieces "A Slow Brunch" through "A Guide to Helping Depressed Parents" and edited responsive mobile design.
           </p>
-          <img src="img/lit2017.png" alt="Screenshot of project">
+          <a href="http://tuftsobserver.org/multimedia/lit2017/"><img src="img/lit2017.png" alt="Screenshot of project"></a>
         </li>
         <li>
-          <h3>South Asia Speaks</h3>
+          <h3><a href="http://tuftsobserver.org/photo-inset/patterns2017/">Photo Inset: A Tale of Two Tehrans</a></h3>
           <p>
-            <a href="http://tuftsobserver.org/multimedia/south-asia-speaks/">Live</a>
-            <a href="https://github.com/tuftsobserver/south-asia-speaks">GitHub</a>
-            Interactive artwork integrated with SoundCloud interviews, built using EaselJS.
-          </p>
-          <img src="img/speaks.png" alt="Screenshot of project">
-        </li>
-        <li>
-          <h3>Podcast: What does your tattoo mean to you?</h3>
-          <p>
-            <a href="http://tuftsobserver.org/multimedia/tattoos/">Live</a>
-            <a href="https://github.com/tuftsobserver/tattoos">GitHub</a>
-            Dynamic photo grid with integrated interview sound bites.
-          </p>
-          <img src="img/tattoo.png" alt="Screenshot of project">
-        </li>
-        <li>
-          <h3>The Reality of Transitioning at Tufts</h3>
-          <p>
-            <a href="http://tuftsobserver.org/multimedia/transhealth/">Live</a>
-            <a href="https://github.com/tuftsobserver/transhealth">GitHub</a>
-            Article with scrolling animations and hover definitions of unfamiliar terms, built using Balloon.css.
-          </p>
-          <img src="img/transhealth.png" alt="Screenshot of project">
-        </li>
-        <li>
-          <h3>Photo Inset: A Tale of Two Tehrans</h3>
-          <p>
-            <a href="http://tuftsobserver.org/photo-inset/patterns2017/">Live</a>
             <a href="https://github.com/tuftsobserver/photo-inset/tree/master/patterns2017">GitHub</a>
             Digital gallery of artistic photoset designed to resemble a handwritten scrapbook. Group effort: co-designed.
           </p>
-          <img src="img/tehran.png" alt="Screenshot of project">
+          <a href="http://tuftsobserver.org/photo-inset/patterns2017/"><img src="img/tehran.png" alt="Screenshot of project"></a>
         </li>
       </ul>
 
