added desmos viz

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
           </p>
           <a href="https://mimmackk.github.io/hopfield/simulation/index.html"><img src="https://raw.githubusercontent.com/mimmackk/hopfield/master/simulation/head.jpg" alt="Screenshot of project"></a>
         </li>
+        <li>
+          <h3><a href="https://www.desmos.com/calculator/jtkvh3e74t">Desmos Eigenvector Animation</a></h3>
+          <p>
+            Simple, interactive animation built in Desmos for my linear algebra students. A lecture tool to illustrate the visual meaning of an eigenvector.
+          </p>
+          <a href="https://www.desmos.com/calculator/jtkvh3e74t"><img src="img/desmos-eigvecs.png" alt="Screenshot of project"></a>
+        </li>
       </ul>
 
     </section>
