--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2>About</h2>
         <div id="headshot"><img src="img/0.jpg"></div>
         <p>
-          I enjoy building mathematical vizualizations and am a hobbiest web app designer. I've lived all across the United States — I grew up in North Carolina, went to school in Massachussetts and California, and am currently bunkered down in Omaha — and I'm always excited to explore new places and experiences.
+          I enjoy building mathematical visualizations and am a hobbiest web app designer. I've lived all across the United States — I grew up in North Carolina, went to school in Massachussetts and California, and am currently bunkered down in Omaha — and I'm always excited to explore new places and experiences.
         </p>
         <p>
           In my free time, I love cooking with friends, tutoring math, and writing speculative romance stories, and when I lived in California, I enjoyed helping my parents build their own house in the Santa Cruz mountains.
