small edits for clarity

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <h2>About</h2>
         <div id="headshot"><img src="img/0.jpg"></div>
         <p>
-          I enjoy building mathematical visualizations and am a hobbyist web app designer. I've lived all across the United States — I grew up in North Carolina, went to school in Massachusetts and California, and am currently hunkered down in Omaha — and I'm always excited to explore new places and experiences.
+          I'm recent graduate of UC Davis with a master's degree in applied mathematics and a background in computer science and design. I earned my bachelor's in applied math from Tufts University in 2018.
         </p>
         <p>
-          In my free time, I love cooking with friends, tutoring math, and writing speculative romance stories, and when I lived in California, I enjoyed helping my parents build their own house in the Santa Cruz mountains.
+          I enjoy building mathematical visualizations and am a hobbyist web app designer. In my free time, I also love cooking with friends and writing speculative romances, and when I lived in California, I helped my parents build their own house in the Santa Cruz mountains.
         </p>
         <p style="text-align: center">
           <i class="fa fa-angle-double-down" aria-hidden="true"></i>
@@ -65,7 +65,7 @@
           <h3><a href="https://mimmackk.github.io/hopfield/simulation/index.html">Hopfield Network Simulation</a></h3>
           <p>
             <a href="https://github.com/mimmackk/hopfield/">GitHub</a>
-            JavaScript simulation of a Hopfield network, a type of neural network that models associative memory. 
+            JavaScript simulation of a Hopfield network, a type of neural network that models associative memory.
           </p>
           <a href="https://mimmackk.github.io/hopfield/simulation/index.html"><img src="https://raw.githubusercontent.com/mimmackk/hopfield/master/simulation/head.jpg" alt="Screenshot of project"></a>
         </li>
@@ -90,7 +90,7 @@
               Map of the spread of Tufts courses by department across campus. Built to accompany article on departments' geographic centralization.
             </p>
             <p>
-              Group effort. Co-designed, performed data collection, integrated data with Google Maps API, and edited responsive mobile design.
+              Group effort: co-designed and co-developed. Performed data collection, integrated data with Google Maps API, and edited responsive mobile design.
             </p>
             <a href="http://tuftsobserver.org/multimedia/major-sprawl"><img src="img/major-sprawl.png" alt="Screenshot of project"></a>
           </li>
@@ -157,7 +157,7 @@
             Artistic digitization of the Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, and art.
           </p>
           <p>
-            Group effort. Converted art to animated GIFs, designed pieces "A Tendency to Ask" through ending credits, and cohered all final designs.
+            Group effort. Converted art to animated GIFs, designed and developed pieces "A Tendency to Ask" through ending credits, and cohered all final designs.
           </p>
           <a href="http://tuftsobserver.org/multimedia/lit2018"><img src="img/lit2018.png" alt="Screenshot of project"></a>
         </li>
@@ -179,7 +179,7 @@
             Artistic digitization of the Queerness Issue of the Tufts Observer, containing a compilation of poetry, prose, photography, and art.
           </p>
           <p>
-            Group effort. Designed pieces "I Identify as a Heterosexual" through "Addendum," title page, table of contents, and credits; cohered all final designs.
+            Group effort. Designed and developed pieces "I Identify as a Heterosexual" through "Addendum," title page, table of contents, and credits; cohered all final designs.
           </p>
           <a href="http://tuftsobserver.org/multimedia/queerness2017/"><img src="img/queerness.png" alt="Screenshot of project"></a>
         </li>
@@ -217,7 +217,7 @@
             Artistic digitization of the Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, photography, and art.
           </p>
           <p>
-            Group effort. Designed pieces "A Slow Brunch" through "A Guide to Helping Depressed Parents" and edited responsive mobile design.
+            Group effort. Designed and developed pieces "A Slow Brunch" through "A Guide to Helping Depressed Parents" and edited responsive mobile design.
           </p>
           <a href="http://tuftsobserver.org/multimedia/lit2017/"><img src="img/lit2017.png" alt="Screenshot of project"></a>
         </li>
@@ -225,7 +225,7 @@
           <h3><a href="http://tuftsobserver.org/photo-inset/patterns2017/">Photo Inset: A Tale of Two Tehrans</a></h3>
           <p>
             <a href="https://github.com/tuftsobserver/photo-inset/tree/master/patterns2017">GitHub</a>
-            Digital gallery of artistic photoset designed to resemble a handwritten scrapbook. Group effort: co-designed.
+            Digital gallery of artistic photoset designed to resemble a handwritten scrapbook. Group effort: co-designed and co-developed.
           </p>
           <a href="http://tuftsobserver.org/photo-inset/patterns2017/"><img src="img/tehran.png" alt="Screenshot of project"></a>
         </li>
