--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2>About</h2>
         <div id="headshot"><img src="img/0.jpg"></div>
         <p>
-          I'm recent graduate of UC Davis with a master's degree in applied mathematics and a background in computer science and design. I earned my bachelor's in applied math from Tufts University in 2018.
+          I'm a recent graduate of UC Davis with a master's degree in applied mathematics and a background in computer science and design. I earned my bachelor's in applied math from Tufts University in 2018.
         </p>
         <p>
           I enjoy building mathematical visualizations and am a hobbyist web app designer. In my free time, I also love cooking with friends and writing speculative romances, and when I lived in California, I helped my parents build their own house in the Santa Cruz mountains.
