Corrected link url

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
           <a href="http://mimmackk.github.io/unitball"><img src="https://raw.githubusercontent.com/mimmackk/unitball/master/head.jpg" alt="Screenshot of project"></a>
         </li>
         <li>
-          <h3><a href="https://mimmackk.github.io/hopfield/simulation/index.html">Hopfield Network Simulation</a></h3>
+          <h3><a href="https://mimmackk.github.io/hopfield/">Hopfield Network Simulation</a></h3>
           <p>
             <a href="https://github.com/mimmackk/hopfield/">GitHub</a>
             JavaScript simulation of a Hopfield network, a type of neural network that models associative memory.
           </p>
-          <a href="https://mimmackk.github.io/hopfield/simulation/index.html"><img src="https://raw.githubusercontent.com/mimmackk/hopfield/master/simulation/head.jpg" alt="Screenshot of project"></a>
+          <a href="https://mimmackk.github.io/hopfield/"><img src="https://raw.githubusercontent.com/mimmackk/hopfield/master/simulation/head.jpg" alt="Screenshot of project"></a>
         </li>
         <li>
           <h3><a href="https://www.desmos.com/calculator/jtkvh3e74t">Desmos Eigenvector Animation</a></h3>
